--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,6 +16,7 @@
     "@nivo/prettier": "workspace:*",
     "@nivo/tsconfig": "workspace:*",
     "@types/node": "^20.12.7",
+    "prisma": "^5.13.0",
     "tsx": "^4.7.2",
     "typescript": "^5.4.5"
   },
