--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@fastify/cors": "^9.0.1",
     "@nivo/auth": "workspace:*",
+    "@prisma/client": "5.13.0",
     "fastify": "^4.26.2",
     "fastify-type-provider-zod": "^1.1.9",
     "zod": "^3.22.5"
