feat(http/routes): add create acc route

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,4 +1,11 @@
 {
   "extends": "@nivo/tsconfig/node.json",
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
+  }
 }
