--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,6 +8,7 @@
     "@fastify/cors": "^9.0.1",
     "@nivo/auth": "workspace:*",
     "@prisma/client": "5.13.0",
+    "bcryptjs": "^2.4.3",
     "fastify": "^4.26.2",
     "fastify-type-provider-zod": "^1.1.9",
     "zod": "^3.22.5"
@@ -16,6 +17,7 @@
     "@nivo/eslint-config": "workspace:*",
     "@nivo/prettier": "workspace:*",
     "@nivo/tsconfig": "workspace:*",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.12.7",
     "prisma": "^5.13.0",
     "tsx": "^4.7.2",
