--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
     "zod": "^3.22.5"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@nivo/eslint-config": "workspace:*",
     "@nivo/prettier": "workspace:*",
     "@nivo/tsconfig": "workspace:*",
@@ -28,5 +29,8 @@
       "@nivo/eslint-config/node"
     ]
   },
-  "prettier": "@nivo/prettier"
+  "prettier": "@nivo/prettier",
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  }
 }
