feat(http/middlewares): add auth middleware

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@nivo/tsconfig/node.json",
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "types/*.d.ts"],
 
   "compilerOptions": {
     "baseUrl": ".",
