--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "turbo lint"
   },
   "devDependencies": {
-    "turbo": "latest"
+    "turbo": "^1.13.2"
   },
   "packageManager": "pnpm@8.9.0",
   "engines": {
