--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,20 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.408.0",
+    "next": "15.0.0-rc.0",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
-    "next": "15.0.0-rc.0"
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@nivo/eslint-config": "workspace:*",
+    "@nivo/prettier": "workspace:*",
+    "@nivo/tsconfig": "workspace:*",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "@nivo/eslint-config": "workspace:*",
-    "@nivo/prettier": "workspace:*",
-    "@nivo/tsconfig": "workspace:*"
+    "typescript": "^5"
   },
   "eslintConfig": {
     "extends": [
