chore: change saas name

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@nivo/tsconfig/node.json",
+  "extends": "@saas/tsconfig/node.json",
   "include": ["src/**/*", "types/*.d.ts"],
 
   "compilerOptions": {
