--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nivo/api",
+  "name": "@saas/api",
   "version": "1.0.0",
   "scripts": {
     "dev": "pnpm env:load tsx watch src/http/server.ts",
@@ -13,8 +13,8 @@
     "@fastify/jwt": "^8.0.0",
     "@fastify/swagger": "^8.14.0",
     "@fastify/swagger-ui": "^3.0.0",
-    "@nivo/auth": "workspace:*",
-    "@nivo/env": "workspace:*",
+    "@saas/auth": "workspace:*",
+    "@saas/env": "workspace:*",
     "@prisma/client": "5.16.2",
     "bcryptjs": "^2.4.3",
     "fastify": "^4.26.2",
@@ -24,9 +24,9 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
-    "@nivo/eslint-config": "workspace:*",
-    "@nivo/prettier": "workspace:*",
-    "@nivo/tsconfig": "workspace:*",
+    "@saas/eslint-config": "workspace:*",
+    "@saas/prettier": "workspace:*",
+    "@saas/tsconfig": "workspace:*",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.12.7",
     "dotenv-cli": "^7.4.1",
@@ -36,10 +36,10 @@
   },
   "eslintConfig": {
     "extends": [
-      "@nivo/eslint-config/node"
+      "@saas/eslint-config/node"
     ]
   },
-  "prettier": "@nivo/prettier",
+  "prettier": "@saas/prettier",
   "prisma": {
     "seed": "tsx prisma/seed.ts"
   }
