--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "@nivo/auth",
+  "name": "@saas/auth",
   "version": "0.0.0",
   "private": true,
   "main": "src/index.ts",
   "types": "src/index.ts",
   "devDependencies": {
-    "@nivo/eslint-config": "workspace:*",
-    "@nivo/prettier": "workspace:*",
-    "@nivo/tsconfig": "workspace:*"
+    "@saas/eslint-config": "workspace:*",
+    "@saas/prettier": "workspace:*",
+    "@saas/tsconfig": "workspace:*"
   },
   "eslintConfig": {
     "extends": [
-      "@nivo/eslint-config/library"
+      "@saas/eslint-config/library"
     ]
   },
-  "prettier": "@nivo/prettier",
+  "prettier": "@saas/prettier",
   "dependencies": {
     "@casl/ability": "^6.7.1",
     "zod": "^3.22.5"
