--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "@nivo/env",
+  "name": "@saas/env",
   "version": "0.0.0",
   "private": true,
   "main": "index.ts",
   "types": "index.ts",
   "devDependencies": {
-    "@nivo/eslint-config": "workspace:*",
-    "@nivo/prettier": "workspace:*",
-    "@nivo/tsconfig": "workspace:*",
+    "@saas/eslint-config": "workspace:*",
+    "@saas/prettier": "workspace:*",
+    "@saas/tsconfig": "workspace:*",
     "@types/node": "^20.12.7"
   },
   "eslintConfig": {
     "extends": [
-      "@nivo/eslint-config/library"
+      "@saas/eslint-config/library"
     ]
   },
-  "prettier": "@nivo/prettier",
+  "prettier": "@saas/prettier",
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.10.1",
     "zod": "^3.22.5"
